--- a/src/App.css
+++ b/src/App.css
@@ -165,3 +165,12 @@ header {
 .resource-box p {
   color: #666;
 }
+
+.profile-image {
+  position: absolute;
+  top: 10px; /* Adjust as needed */
+  left: 20px; /* Adjust as needed */
+  width: 100px; /* Adjust the width of the image */
+  height: 100px; /* Adjust the height of the image */
+  border-radius: 50%; /* Make the image circular */
+}
